--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    repositories {
+        google()
+    }
 }
 
 allprojects {
@@ -36,4 +39,8 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+repositories {
+    google()
 }
