--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,9 @@ org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 # 这个值一般跟你的AndroidStudio版本号一致
-localGradlePluginVersion=3.1.2
+localGradlePluginVersion=3.2.0
 
 # 每次更改“isModule”的值后，需要点击 "Sync Project" 按钮
 # isModule是“集成开发模式”和“组件开发模式”的切换开关
-isModule=true
+isModule=false
 
