--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation project(':lib_base')
     if (!isModule.toBoolean()) {
         implementation project(':module_main')
+        implementation project(':module_login')
+        implementation project(':module_usercenter')
     }
     implementation files('libs/acra-4.5.0.jar')
 }
