--- a/module_login/src/main/AndroidManifest.xml
+++ b/module_login/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activity.LoginActivity">
         </activity>
     </application>
 
