--- a/module_login/src/main/module/AndroidManifest.xml
+++ b/module_login/src/main/module/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:name="debug.LoginApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
