--- a/module_usercenter/src/main/AndroidManifest.xml
+++ b/module_usercenter/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="com.yann.module.usercenter">
 
     <application android:theme="@style/AppTheme">
-        <activity android:name=".UserCenterActivity">
+        <activity android:name=".activity.UserCenterActivity">
         </activity>
+        <activity android:name=".activity.SettingActivity" />
     </application>
 
 </manifest>
